[gd_scene load_steps=10 format=3 uid="uid://chqawlnduanri"]

[ext_resource type="Script" path="res://controllers/combatant/combatant_controller.gd" id="1_7aglf"]
[ext_resource type="PackedScene" uid="uid://dwksfcr20awc4" path="res://view/combatant/combatant_view.tscn" id="2_0kusj"]
[ext_resource type="Script" path="res://controllers/combatant_state_machine/combatant_controller_state_machine.gd" id="3_4e6ac"]
[ext_resource type="Script" path="res://controllers/combatant_state_machine/combatant_controller_idle_state.gd" id="4_xqemp"]
[ext_resource type="Script" path="res://controllers/combatant_state_machine/combatant_controller_approach_enemy_state.gd" id="5_ekps5"]
[ext_resource type="Script" path="res://controllers/combatant_state_machine/combatant_controller_engage_enemy_state.gd" id="6_7wdbh"]
[ext_resource type="Script" path="res://controllers/combatant_state_machine/combatant_controller_hit_state.gd" id="7_4702w"]
[ext_resource type="Script" path="res://controllers/combatant_state_machine/combatant_controller_dead_state.gd" id="8_dg2nt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r30q3"]
radius = 6.0

[node name="CombatantController" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
input_pickable = true
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_7aglf")

[node name="CombatantView" parent="." instance=ExtResource("2_0kusj")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_r30q3")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("controller")]
unique_name_in_owner = true
script = ExtResource("3_4e6ac")
controller = NodePath("..")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("4_xqemp")

[node name="ApproachState" type="Node" parent="StateMachine" node_paths=PackedStringArray("navigation_agent", "approach_timer")]
script = ExtResource("5_ekps5")
navigation_agent = NodePath("../../NavigationAgent2D")
approach_timer = NodePath("ApproachTimer")

[node name="ApproachTimer" type="Timer" parent="StateMachine/ApproachState"]
wait_time = 0.5
autostart = true

[node name="EngageState" type="Node" parent="StateMachine"]
script = ExtResource("6_7wdbh")

[node name="HitState" type="Node" parent="StateMachine"]
script = ExtResource("7_4702w")

[node name="DeadState" type="Node" parent="StateMachine"]
script = ExtResource("8_dg2nt")

[connection signal="input_event" from="." to="." method="_on_input_event"]
